# Flow

./: .gitignore  DEVELOPMENT.md  README.md  REDESIGN_CHANGES.md  bank-statement-parser.py  package-lock.json
backend/: .env.example  .gitignore  README.md  REVIEW.md  __init__.py  app.py  bank-statement-parser.py  debug_pdf.py  main.py  pyproject.toml  requirements.txt
backend/api/: __init__.py  advice.py  auth.py  bank_statement.py  budget.py  momentum.py  transactions.py
backend/core/: __init__.py  engines.py  models.py  momentum.py
backend/db/: __init__.py  database.py  models.py
backend/models/: __init__.py  schemas.py
backend/services/: __init__.py  features.py  momentum_service.py  parser.py  predictor.py  trainer.py
mobile/: .gitignore  App.tsx  COMPLETION_CHECKLIST.md  COMPONENT_REFERENCE.md  COMPONENT_USAGE.md  IMPLEMENTATION_COMPLETE.md  OVERVIEW.md  QUICK_START.md  README_UI.md  SETUP.md  START_HERE.md  UI_ENHANCEMENTS.md  UI_SUMMARY.md  app.json  package-lock.json  package.json  supabase-schema.sql  tsconfig.json
mobile/app/: _layout.tsx  add.tsx  index.tsx  loading-1.tsx  loading.tsx  modal.tsx  onboarding.tsx  splash.tsx
mobile/components/: MomentumChart.tsx  RightDrawer.tsx  StatCard.tsx  circular-progress.tsx  navbar.tsx  splash-screen.tsx  themed-text.tsx
mobile/constants/: theme.ts
mobile/context/: AuthContext.tsx
mobile/hooks/: use-expenses.ts
mobile/styles/: global.css
mobile/types/: database.ts  shims.d.ts
mobile/utils/: README.md  charts.ts  date.ts  index.ts  momentum.ts  projections.ts  spending.ts
(+35 files in other folders)
